--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,14 +1,50 @@
 {
+  "About": "About",
+  "Change Password": "Change Password",
+  "Change Your Password": "Change Your Password",
+  "Confirm Password": "Confirm Password",
+  "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
+  "Current Password": "Current Password",
+  "Dont have an account?": "Dont have an account?",
   "English": "English",
+  "Enter Password": "Enter Password",
+  "Enter username": "Enter username",
+  "Error": "Error",
+  "Ex: Developer Lead": "Ex: Developer Lead",
+  "Exit": "Exit",
+  "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
+  "First Name": "First Name",
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
+  "Last Name": "Last Name",
+  "Login": "Login",
+  "Login failed": "Login failed",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
   "Missing required fields: userName, password": "Missing required fields: userName, password",
+  "Must be at least 3 characters": "Must be at least 3 characters",
+  "New Password": "New Password",
+  "Password": "Password",
+  "Password changed successfully": "Password changed successfully",
+  "Password must be at least 6 characters": "Password must be at least 6 characters",
+  "Passwords do not match": "Passwords do not match",
   "Persian": "Persian",
+  "Personal Details": "Personal Details",
+  "Register": "Register",
   "Registered successfully": "Registered successfully",
+  "Success": "Success",
+  "Update user": "Update user",
+  "User Name": "User Name",
+  "User login successfully": "User login successfully",
+  "User registered successfully": "User registered successfully",
+  "Username": "Username",
   "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
+  "You already have account?": "You already have account?",
+  "Your Current Password": "Your Current Password",
+  "Your First Name": "Your First Name",
+  "Your Last Name": "Your Last Name",
+  "Your UserName": "Your UserName",
   "about": "About",
   "avatar": "Avatar",
   "description": "Web Developer",
