--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
+  ".not-draggable": ".not-draggable",
   "About": "About",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -19,6 +20,7 @@
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
   "Last Name": "Last Name",
+  "Latest Incoming": "Latest Incoming",
   "Login": "Login",
   "Login failed": "Login failed",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
@@ -45,16 +47,31 @@
   "Your First Name": "Your First Name",
   "Your Last Name": "Your Last Name",
   "Your UserName": "Your UserName",
+  "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
+  "action": "action",
   "avatar": "Avatar",
+  "content": "content",
   "description": "Web Developer",
   "displayName": "Display Name",
+  "div": "div",
+  "draft": "draft",
   "email": "Email",
   "firstName": "First Name",
   "lastName": "Last Name",
+  "meta_key": "meta_key",
+  "meta_value": "meta_value",
+  "name": "name",
   "password": "password",
+  "pending": "pending",
   "salt": "salt",
+  "session_token": "session_token",
+  "setting_key": "setting_key",
+  "setting_value": "setting_value",
   "siteName": "Ali Zemani",
+  "slug": "slug",
+  "status": "status",
+  "title": "title",
   "titleFirst": "Ali",
   "titleSecond": "Zemani",
   "username": "username",
