--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,4 +1,5 @@
 {
+  ".not-draggable": ".not-draggable",
   "About": "About",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -19,6 +20,7 @@
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
   "Last Name": "Last Name",
+  "Latest Incoming": "آخرین ورودی ها",
   "Login": "Login",
   "Login failed": "Login failed",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
@@ -45,16 +47,31 @@
   "Your First Name": "Your First Name",
   "Your Last Name": "Your Last Name",
   "Your UserName": "Your UserName",
+  "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
+  "action": "action",
   "avatar": "آواتار",
+  "content": "content",
   "description": "توسعه‌دهنده وب",
   "displayName": "نام نمایشی",
+  "div": "div",
+  "draft": "draft",
   "email": "ایمیل",
   "firstName": "نام",
   "lastName": "نام خانوادگی",
+  "meta_key": "meta_key",
+  "meta_value": "meta_value",
+  "name": "name",
   "password": "گذرواژه",
+  "pending": "pending",
   "salt": "سالـت",
+  "session_token": "session_token",
+  "setting_key": "setting_key",
+  "setting_value": "setting_value",
   "siteName": "علی زمانی",
+  "slug": "slug",
+  "status": "status",
+  "title": "title",
   "titleFirst": "علی",
   "titleSecond": "زمانی",
   "username": "نام کاربری",
