--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -5,6 +5,7 @@
   "Change Your Password": "Change Your Password",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
+  "Contact": "Contact",
   "Current Password": "Current Password",
   "Dont have an account?": "Dont have an account?",
   "English": "English",
@@ -13,9 +14,11 @@
   "Error": "Error",
   "Ex: Developer Lead": "Ex: Developer Lead",
   "Exit": "Exit",
+  "Explorer": "Explorer",
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "First Name": "First Name",
+  "Home": "Home",
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
@@ -23,10 +26,12 @@
   "Latest Incoming": "Latest Incoming",
   "Login": "Login",
   "Login failed": "Login failed",
+  "Manage": "Manage",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
   "Missing required fields: userName, password": "Missing required fields: userName, password",
   "Must be at least 3 characters": "Must be at least 3 characters",
   "New Password": "New Password",
+  "Noting is Here :(": "Noting is Here :(",
   "Password": "Password",
   "Password changed successfully": "Password changed successfully",
   "Password must be at least 6 characters": "Password must be at least 6 characters",
@@ -58,6 +63,7 @@
   "draft": "draft",
   "email": "Email",
   "firstName": "First Name",
+  "i18n": "i18n",
   "lastName": "Last Name",
   "meta_key": "meta_key",
   "meta_value": "meta_value",
@@ -71,6 +77,7 @@
   "siteName": "Ali Zemani",
   "slug": "slug",
   "status": "status",
+  "theme": "theme",
   "title": "title",
   "titleFirst": "Ali",
   "titleSecond": "Zemani",
