--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,79 +1,86 @@
 {
   ".not-draggable": ".not-draggable",
-  "About": "About",
-  "Change Password": "Change Password",
-  "Change Your Password": "Change Your Password",
-  "Confirm Password": "Confirm Password",
-  "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
-  "Current Password": "Current Password",
-  "Dont have an account?": "Dont have an account?",
+  "About": "درباره",
+  "Change Password": "تغییر گذرواژه",
+  "Change Your Password": "گذرواژه خود را تغییر دهید",
+  "Confirm Password": "تایید گذرواژه",
+  "Confirm Password must be at least 6 characters": "تایید گذرواژه باید حداقل ۶ کاراکتر باشد",
+  "Contact": "تماس",
+  "Current Password": "گذرواژه فعلی",
+  "Dont have an account?": "حساب کاربری ندارید؟",
   "English": "انگلیسی",
-  "Enter Password": "Enter Password",
-  "Enter username": "Enter username",
-  "Error": "Error",
-  "Ex: Developer Lead": "Ex: Developer Lead",
-  "Exit": "Exit",
-  "Failed to change password": "Failed to change password",
-  "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
-  "First Name": "First Name",
-  "Internal Server Error": "Internal Server Error",
-  "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
-  "Invalid username or password": "Invalid username or password",
-  "Last Name": "Last Name",
-  "Latest Incoming": "آخرین ورودی ها",
-  "Login": "Login",
-  "Login failed": "Login failed",
-  "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
-  "Missing required fields: userName, password": "Missing required fields: userName, password",
-  "Must be at least 3 characters": "Must be at least 3 characters",
-  "New Password": "New Password",
-  "Password": "Password",
-  "Password changed successfully": "Password changed successfully",
-  "Password must be at least 6 characters": "Password must be at least 6 characters",
-  "Passwords do not match": "Passwords do not match",
+  "Enter Password": "گذرواژه را وارد کنید",
+  "Enter username": "نام کاربری را وارد کنید",
+  "Error": "خطا",
+  "Ex: Developer Lead": "مثال: سرپرست توسعه",
+  "Exit": "خروج",
+  "Explorer": "کاوشگر",
+  "Failed to change password": "تغییر گذرواژه ناموفق بود",
+  "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید ناموفق بود",
+  "First Name": "نام",
+  "Home": "خانه",
+  "Internal Server Error": "خطای داخلی سرور",
+  "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
+  "Invalid username or password": "نام کاربری یا گذرواژه نامعتبر است",
+  "Last Name": "نام خانوادگی",
+  "Latest Incoming": "آخرین ورودی‌ها",
+  "Login": "ورود",
+  "Login failed": "ورود ناموفق بود",
+  "Manage": "Manage",
+  "Missing required fields: firstName, lastName, userName, or password": "فیلدهای مورد نیاز: نام، نام خانوادگی، نام کاربری یا گذرواژه وارد نشده‌اند",
+  "Missing required fields: userName, password": "نام کاربری و گذرواژه الزامی است",
+  "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
+  "New Password": "گذرواژه جدید",
+  "Noting is Here :(": "چیزی اینجا نیست :(",
+  "Password": "گذرواژه",
+  "Password changed successfully": "گذرواژه با موفقیت تغییر کرد",
+  "Password must be at least 6 characters": "گذرواژه باید حداقل ۶ کاراکتر باشد",
+  "Passwords do not match": "گذرواژه‌ها مطابقت ندارند",
   "Persian": "فارسی",
-  "Personal Details": "Personal Details",
-  "Register": "Register",
-  "Registered successfully": "Registered successfully",
-  "Success": "Success",
-  "Update user": "Update user",
-  "User Name": "User Name",
-  "User login successfully": "User login successfully",
-  "User registered successfully": "User registered successfully",
-  "Username": "Username",
-  "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
-  "You already have account?": "You already have account?",
-  "Your Current Password": "Your Current Password",
-  "Your First Name": "Your First Name",
-  "Your Last Name": "Your Last Name",
-  "Your UserName": "Your UserName",
+  "Personal Details": "اطلاعات شخصی",
+  "Register": "ثبت‌نام",
+  "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
+  "Success": "موفقیت‌آمیز",
+  "Update user": "به‌روزرسانی کاربر",
+  "User Name": "نام کاربری",
+  "User login successfully": "کاربر با موفقیت وارد شد",
+  "User registered successfully": "کاربر با موفقیت ثبت شد",
+  "Username": "نام کاربری",
+  "Username is already taken. Please choose another one.": "این نام کاربری قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
+  "You already have account?": "آیا قبلاً حساب کاربری دارید؟",
+  "Your Current Password": "گذرواژه فعلی شما",
+  "Your First Name": "نام شما",
+  "Your Last Name": "نام خانوادگی شما",
+  "Your UserName": "نام کاربری شما",
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
-  "action": "action",
+  "action": "عمل",
   "avatar": "آواتار",
-  "content": "content",
+  "content": "محتوا",
   "description": "توسعه‌دهنده وب",
   "displayName": "نام نمایشی",
   "div": "div",
-  "draft": "draft",
+  "draft": "پیش‌نویس",
   "email": "ایمیل",
   "firstName": "نام",
+  "i18n": "i18n",
   "lastName": "نام خانوادگی",
-  "meta_key": "meta_key",
-  "meta_value": "meta_value",
-  "name": "name",
+  "meta_key": "کلید متا",
+  "meta_value": "مقدار متا",
+  "name": "نام",
   "password": "گذرواژه",
-  "pending": "pending",
+  "pending": "در انتظار",
   "salt": "سالـت",
-  "session_token": "session_token",
-  "setting_key": "setting_key",
-  "setting_value": "setting_value",
+  "session_token": "توکن نشست",
+  "setting_key": "کلید تنظیمات",
+  "setting_value": "مقدار تنظیمات",
   "siteName": "علی زمانی",
-  "slug": "slug",
-  "status": "status",
-  "title": "title",
+  "slug": "نامک",
+  "status": "وضعیت",
+  "theme": "theme",
+  "title": "عنوان",
   "titleFirst": "علی",
   "titleSecond": "زمانی",
   "username": "نام کاربری",
-  "vue": "vue"
+  "vue": "ویو"
 }
