--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,12 +1,16 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "About",
+  "All Posts": "All Posts",
+  "Category": "Category",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
+  "Comments": "Comments",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
   "Contact": "Contact",
   "Current Password": "Current Password",
+  "Dashboard": "Dashboard",
   "Dont have an account?": "Dont have an account?",
   "English": "English",
   "Enter Password": "Enter Password",
@@ -18,6 +22,8 @@
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "First Name": "First Name",
+  "GitHub": "GitHub",
+  "Help": "Help",
   "Home": "Home",
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
@@ -38,6 +44,7 @@
   "Passwords do not match": "Passwords do not match",
   "Persian": "Persian",
   "Personal Details": "Personal Details",
+  "Posts": "Posts",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
   "Success": "Success",
@@ -47,6 +54,7 @@
   "User registered successfully": "User registered successfully",
   "Username": "Username",
   "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
+  "Users": "Users",
   "You already have account?": "You already have account?",
   "Your Current Password": "Your Current Password",
   "Your First Name": "Your First Name",
