--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,12 +1,16 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "درباره",
+  "All Posts": "همه",
+  "Category": "دسته",
   "Change Password": "تغییر گذرواژه",
   "Change Your Password": "گذرواژه خود را تغییر دهید",
+  "Comments": "نظرات",
   "Confirm Password": "تایید گذرواژه",
   "Confirm Password must be at least 6 characters": "تایید گذرواژه باید حداقل ۶ کاراکتر باشد",
   "Contact": "تماس",
   "Current Password": "گذرواژه فعلی",
+  "Dashboard": "داشبورد",
   "Dont have an account?": "حساب کاربری ندارید؟",
   "English": "انگلیسی",
   "Enter Password": "گذرواژه را وارد کنید",
@@ -18,6 +22,8 @@
   "Failed to change password": "تغییر گذرواژه ناموفق بود",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید ناموفق بود",
   "First Name": "نام",
+  "GitHub": "گیت‌هاب",
+  "Help": "راهنما",
   "Home": "خانه",
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
@@ -26,7 +32,7 @@
   "Latest Incoming": "آخرین ورودی‌ها",
   "Login": "ورود",
   "Login failed": "ورود ناموفق بود",
-  "Manage": "Manage",
+  "Manage": "مدیریت",
   "Missing required fields: firstName, lastName, userName, or password": "فیلدهای مورد نیاز: نام، نام خانوادگی، نام کاربری یا گذرواژه وارد نشده‌اند",
   "Missing required fields: userName, password": "نام کاربری و گذرواژه الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
@@ -38,6 +44,7 @@
   "Passwords do not match": "گذرواژه‌ها مطابقت ندارند",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
+  "Posts": "پست‌ها",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
   "Success": "موفقیت‌آمیز",
@@ -47,6 +54,7 @@
   "User registered successfully": "کاربر با موفقیت ثبت شد",
   "Username": "نام کاربری",
   "Username is already taken. Please choose another one.": "این نام کاربری قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
+  "Users": "کاربران",
   "You already have account?": "آیا قبلاً حساب کاربری دارید؟",
   "Your Current Password": "گذرواژه فعلی شما",
   "Your First Name": "نام شما",
@@ -77,7 +85,7 @@
   "siteName": "علی زمانی",
   "slug": "نامک",
   "status": "وضعیت",
-  "theme": "theme",
+  "theme": "قالب",
   "title": "عنوان",
   "titleFirst": "علی",
   "titleSecond": "زمانی",
