--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,7 +1,7 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "About",
-  "All Posts": "All Posts",
+  "All": "All",
   "Category": "Category",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -28,6 +28,7 @@
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
   "Invalid username or password": "Invalid username or password",
+  "Items": "Items",
   "Last Name": "Last Name",
   "Latest Incoming": "Latest Incoming",
   "Login": "Login",
@@ -44,10 +45,14 @@
   "Passwords do not match": "Passwords do not match",
   "Persian": "Persian",
   "Personal Details": "Personal Details",
-  "Posts": "Posts",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
+  "Roles": "Roles",
+  "Settings": "Settings",
   "Success": "Success",
+  "UBadge": "UBadge",
+  "UButton": "UButton",
+  "UDropdownMenu": "UDropdownMenu",
   "Update user": "Update user",
   "User Name": "User Name",
   "User login successfully": "User login successfully",
