--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,7 +1,7 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "درباره",
-  "All Posts": "همه",
+  "All": "All",
   "Category": "دسته",
   "Change Password": "تغییر گذرواژه",
   "Change Your Password": "گذرواژه خود را تغییر دهید",
@@ -28,6 +28,7 @@
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
   "Invalid username or password": "نام کاربری یا گذرواژه نامعتبر است",
+  "Items": "Items",
   "Last Name": "نام خانوادگی",
   "Latest Incoming": "آخرین ورودی‌ها",
   "Login": "ورود",
@@ -44,10 +45,14 @@
   "Passwords do not match": "گذرواژه‌ها مطابقت ندارند",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
-  "Posts": "پست‌ها",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
+  "Roles": "Roles",
+  "Settings": "Settings",
   "Success": "موفقیت‌آمیز",
+  "UBadge": "UBadge",
+  "UButton": "UButton",
+  "UDropdownMenu": "UDropdownMenu",
   "Update user": "به‌روزرسانی کاربر",
   "User Name": "نام کاربری",
   "User login successfully": "کاربر با موفقیت وارد شد",
