--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -67,31 +67,20 @@
   "Your UserName": "نام کاربری شما",
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
-  "action": "عمل",
   "avatar": "آواتار",
-  "content": "محتوا",
   "description": "توسعه‌دهنده وب",
   "displayName": "نام نمایشی",
   "div": "div",
-  "draft": "پیش‌نویس",
   "email": "ایمیل",
   "firstName": "نام",
   "i18n": "i18n",
   "lastName": "نام خانوادگی",
-  "meta_key": "کلید متا",
-  "meta_value": "مقدار متا",
+  "more": "more",
   "name": "نام",
   "password": "گذرواژه",
-  "pending": "در انتظار",
   "salt": "سالـت",
-  "session_token": "توکن نشست",
-  "setting_key": "کلید تنظیمات",
-  "setting_value": "مقدار تنظیمات",
   "siteName": "علی زمانی",
-  "slug": "نامک",
-  "status": "وضعیت",
   "theme": "قالب",
-  "title": "عنوان",
   "titleFirst": "علی",
   "titleSecond": "زمانی",
   "username": "نام کاربری",
