--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -67,31 +67,20 @@
   "Your UserName": "Your UserName",
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
-  "action": "action",
   "avatar": "Avatar",
-  "content": "content",
   "description": "Web Developer",
   "displayName": "Display Name",
   "div": "div",
-  "draft": "draft",
   "email": "Email",
   "firstName": "First Name",
   "i18n": "i18n",
   "lastName": "Last Name",
-  "meta_key": "meta_key",
-  "meta_value": "meta_value",
+  "more": "more",
   "name": "name",
   "password": "password",
-  "pending": "pending",
   "salt": "salt",
-  "session_token": "session_token",
-  "setting_key": "setting_key",
-  "setting_value": "setting_value",
   "siteName": "Ali Zemani",
-  "slug": "slug",
-  "status": "status",
   "theme": "theme",
-  "title": "title",
   "titleFirst": "Ali",
   "titleSecond": "Zemani",
   "username": "username",
