--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -8,12 +8,14 @@
   "Comments": "Comments",
   "Confirm Password": "Confirm Password",
   "Confirm Password must be at least 6 characters": "Confirm Password must be at least 6 characters",
+  "Confirm password": "Confirm password",
   "Contact": "Contact",
   "Current Password": "Current Password",
   "Dashboard": "Dashboard",
   "Dont have an account?": "Dont have an account?",
   "English": "English",
   "Enter Password": "Enter Password",
+  "Enter password": "Enter password",
   "Enter username": "Enter username",
   "Error": "Error",
   "Ex: Developer Lead": "Ex: Developer Lead",
@@ -24,6 +26,7 @@
   "First Name": "First Name",
   "GitHub": "GitHub",
   "Help": "Help",
+  "Hide password": "Hide password",
   "Home": "Home",
   "Internal Server Error": "Internal Server Error",
   "Internal Server Error. Please try again later.": "Internal Server Error. Please try again later.",
@@ -45,26 +48,31 @@
   "Passwords do not match": "Passwords do not match",
   "Persian": "Persian",
   "Personal Details": "Personal Details",
+  "Profile": "Profile",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
   "Roles": "Roles",
   "Settings": "Settings",
+  "Show password": "Show password",
   "Success": "Success",
+  "Switch Profile": "Switch Profile",
+  "Switch User": "Switch User",
   "UBadge": "UBadge",
   "UButton": "UButton",
   "UDropdownMenu": "UDropdownMenu",
+  "Update Profile": "Update Profile",
   "Update user": "Update user",
-  "User Name": "User Name",
+  "User Registration": "User Registration",
+  "User logged in successfully": "User logged in successfully",
   "User login successfully": "User login successfully",
   "User registered successfully": "User registered successfully",
   "Username": "Username",
   "Username is already taken. Please choose another one.": "Username is already taken. Please choose another one.",
   "Users": "Users",
-  "You already have account?": "You already have account?",
   "Your Current Password": "Your Current Password",
-  "Your First Name": "Your First Name",
-  "Your Last Name": "Your Last Name",
-  "Your UserName": "Your UserName",
+  "Your first name": "Your first name",
+  "Your last name": "Your last name",
+  "Your username": "Your username",
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
   "avatar": "Avatar",
@@ -83,6 +91,5 @@
   "theme": "theme",
   "titleFirst": "Ali",
   "titleSecond": "Zemani",
-  "username": "username",
-  "vue": "vue"
+  "username": "username"
 }
