--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -8,12 +8,14 @@
   "Comments": "نظرات",
   "Confirm Password": "تایید گذرواژه",
   "Confirm Password must be at least 6 characters": "تایید گذرواژه باید حداقل ۶ کاراکتر باشد",
+  "Confirm password": "Confirm password",
   "Contact": "تماس",
   "Current Password": "گذرواژه فعلی",
   "Dashboard": "داشبورد",
   "Dont have an account?": "حساب کاربری ندارید؟",
   "English": "انگلیسی",
   "Enter Password": "گذرواژه را وارد کنید",
+  "Enter password": "Enter password",
   "Enter username": "نام کاربری را وارد کنید",
   "Error": "خطا",
   "Ex: Developer Lead": "مثال: سرپرست توسعه",
@@ -24,6 +26,7 @@
   "First Name": "نام",
   "GitHub": "گیت‌هاب",
   "Help": "راهنما",
+  "Hide password": "Hide password",
   "Home": "خانه",
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
@@ -45,26 +48,31 @@
   "Passwords do not match": "گذرواژه‌ها مطابقت ندارند",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
+  "Profile": "Profile",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
   "Roles": "Roles",
   "Settings": "Settings",
+  "Show password": "Show password",
   "Success": "موفقیت‌آمیز",
+  "Switch Profile": "Switch Profile",
+  "Switch User": "Switch User",
   "UBadge": "UBadge",
   "UButton": "UButton",
   "UDropdownMenu": "UDropdownMenu",
+  "Update Profile": "Update Profile",
   "Update user": "به‌روزرسانی کاربر",
-  "User Name": "نام کاربری",
+  "User Registration": "User Registration",
+  "User logged in successfully": "User logged in successfully",
   "User login successfully": "کاربر با موفقیت وارد شد",
   "User registered successfully": "کاربر با موفقیت ثبت شد",
   "Username": "نام کاربری",
   "Username is already taken. Please choose another one.": "این نام کاربری قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
   "Users": "کاربران",
-  "You already have account?": "آیا قبلاً حساب کاربری دارید؟",
   "Your Current Password": "گذرواژه فعلی شما",
-  "Your First Name": "نام شما",
-  "Your Last Name": "نام خانوادگی شما",
-  "Your UserName": "نام کاربری شما",
+  "Your first name": "Your first name",
+  "Your last name": "Your last name",
+  "Your username": "Your username",
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
   "avatar": "آواتار",
@@ -83,6 +91,5 @@
   "theme": "قالب",
   "titleFirst": "مَـ",
   "titleSecond": "موچیــ",
-  "username": "نام کاربری",
-  "vue": "ویو"
+  "username": "نام کاربری"
 }
