basic role+users adimin

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -56,9 +56,12 @@
   "Success": "Success",
   "Switch Profile": "Switch Profile",
   "Switch User": "Switch User",
+  "UAvatar": "UAvatar",
   "UBadge": "UBadge",
   "UButton": "UButton",
   "UDropdownMenu": "UDropdownMenu",
+  "UPagination": "UPagination",
+  "UTable": "UTable",
   "Update Profile": "Update Profile",
   "Update user": "Update user",
   "User Registration": "User Registration",
