clean admin flow

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,8 +1,7 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "About",
-  "All": "All",
-  "Category": "Category",
+  "Builds": "Builds",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
   "Comments": "Comments",
@@ -23,7 +22,6 @@
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "First Name": "First Name",
-  "GitHub": "GitHub",
   "Help": "Help",
   "Hide password": "Hide password",
   "Home": "Home",
@@ -50,7 +48,6 @@
   "Profile": "Profile",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
-  "Roles": "Roles",
   "Settings": "Settings",
   "Show password": "Show password",
   "Success": "Success",
@@ -63,7 +60,6 @@
   "UPagination": "UPagination",
   "UTable": "UTable",
   "Update Profile": "Update Profile",
-  "Update user": "Update user",
   "User Registration": "User Registration",
   "User logged in successfully": "User logged in successfully",
   "User registered successfully": "User registered successfully",
@@ -87,7 +83,6 @@
   "more": "more",
   "name": "name",
   "password": "password",
-  "salt": "salt",
   "siteName": "Ali Zemani",
   "theme": "theme",
   "titleFirst": "Ali",
