--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,8 +1,7 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "درباره",
-  "All": "All",
-  "Category": "دسته",
+  "Builds": "Builds",
   "Change Password": "تغییر گذرواژه",
   "Change Your Password": "گذرواژه خود را تغییر دهید",
   "Comments": "نظرات",
@@ -23,7 +22,6 @@
   "Failed to change password": "تغییر گذرواژه ناموفق بود",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید ناموفق بود",
   "First Name": "نام",
-  "GitHub": "گیت‌هاب",
   "Help": "راهنما",
   "Hide password": "Hide password",
   "Home": "خانه",
@@ -50,7 +48,6 @@
   "Profile": "Profile",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
-  "Roles": "Roles",
   "Settings": "Settings",
   "Show password": "Show password",
   "Success": "موفقیت‌آمیز",
@@ -63,7 +60,6 @@
   "UPagination": "UPagination",
   "UTable": "UTable",
   "Update Profile": "Update Profile",
-  "Update user": "به‌روزرسانی کاربر",
   "User Registration": "User Registration",
   "User logged in successfully": "User logged in successfully",
   "User registered successfully": "کاربر با موفقیت ثبت شد",
@@ -87,7 +83,6 @@
   "more": "more",
   "name": "نام",
   "password": "گذرواژه",
-  "salt": "سالـت",
   "siteName": "مَموچی",
   "theme": "قالب",
   "titleFirst": "مَـ",
