dash + users clean

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,6 +1,8 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "About",
+  "Add New Role": "Add New Role",
+  "Add New User": "Add New User",
   "Builds": "Builds",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -34,6 +36,7 @@
   "Login": "Login",
   "Login failed": "Login failed",
   "Manage": "Manage",
+  "Manage Users": "Manage Users",
   "Missing required fields: firstName, lastName, userName, or password": "Missing required fields: firstName, lastName, userName, or password",
   "Missing required fields: userName, password": "Missing required fields: userName, password",
   "Must be at least 3 characters": "Must be at least 3 characters",
@@ -73,6 +76,8 @@
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "About",
   "avatar": "Avatar",
+  "cccc": "cccc",
+  "ddMMMM": "ddMMMM",
   "description": "Web Developer",
   "displayName": "Display Name",
   "div": "div",
@@ -83,6 +88,7 @@
   "more": "more",
   "name": "name",
   "password": "password",
+  "salt": "salt",
   "siteName": "Ali Zemani",
   "theme": "theme",
   "titleFirst": "Ali",
