--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -1,78 +1,83 @@
 {
   ".not-draggable": ".not-draggable",
   "About": "درباره",
-  "Builds": "Builds",
-  "Change Password": "تغییر گذرواژه",
-  "Change Your Password": "گذرواژه خود را تغییر دهید",
+  "Add New Role": "افزودن نقش جدید",
+  "Add New User": "افزودن کاربر جدید",
+  "Builds": "ساخت‌ها",
+  "Change Password": "تغییر رمز عبور",
+  "Change Your Password": "رمز عبور خود را تغییر دهید",
   "Comments": "نظرات",
-  "Confirm Password": "تایید گذرواژه",
-  "Confirm Password must be at least 6 characters": "تایید گذرواژه باید حداقل ۶ کاراکتر باشد",
-  "Confirm password": "Confirm password",
+  "Confirm Password": "تایید رمز عبور",
+  "Confirm Password must be at least 6 characters": "رمز عبور تایید شده باید حداقل ۶ کاراکتر باشد",
+  "Confirm password": "تایید رمز عبور",
   "Contact": "تماس",
-  "Current Password": "گذرواژه فعلی",
+  "Current Password": "رمز عبور فعلی",
   "Dashboard": "داشبورد",
   "English": "انگلیسی",
-  "Enter Password": "گذرواژه را وارد کنید",
-  "Enter password": "Enter password",
+  "Enter Password": "رمز عبور را وارد کنید",
+  "Enter password": "رمز عبور را وارد کنید",
   "Enter username": "نام کاربری را وارد کنید",
   "Error": "خطا",
   "Ex: Developer Lead": "مثال: سرپرست توسعه",
   "Exit": "خروج",
   "Explorer": "کاوشگر",
-  "Failed to change password": "تغییر گذرواژه ناموفق بود",
-  "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید ناموفق بود",
+  "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
+  "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
   "First Name": "نام",
   "Help": "راهنما",
-  "Hide password": "Hide password",
+  "Hide password": "پنهان کردن رمز عبور",
   "Home": "خانه",
   "Internal Server Error": "خطای داخلی سرور",
   "Internal Server Error. Please try again later.": "خطای داخلی سرور. لطفاً بعداً دوباره امتحان کنید.",
-  "Invalid username or password": "نام کاربری یا گذرواژه نامعتبر است",
-  "Items": "Items",
+  "Invalid username or password": "نام کاربری یا رمز عبور اشتباه است",
+  "Items": "آیتم‌ها",
   "Last Name": "نام خانوادگی",
   "Latest Incoming": "آخرین ورودی‌ها",
   "Login": "ورود",
-  "Login failed": "ورود ناموفق بود",
+  "Login failed": "ورود با مشکل مواجه شد",
   "Manage": "مدیریت",
-  "Missing required fields: firstName, lastName, userName, or password": "فیلدهای مورد نیاز: نام، نام خانوادگی، نام کاربری یا گذرواژه وارد نشده‌اند",
-  "Missing required fields: userName, password": "نام کاربری و گذرواژه الزامی است",
+  "Manage Users": "مدیریت کاربران",
+  "Missing required fields: firstName, lastName, userName, or password": "فیلدهای مورد نیاز: نام، نام خانوادگی، نام کاربری یا رمز عبور وارد نشده‌اند",
+  "Missing required fields: userName, password": "نام کاربری و رمز عبور الزامی است",
   "Must be at least 3 characters": "باید حداقل ۳ کاراکتر باشد",
-  "New Password": "گذرواژه جدید",
-  "Noting is Here :(": "چیزی اینجا نیست :(",
-  "Password": "گذرواژه",
-  "Password changed successfully": "گذرواژه با موفقیت تغییر کرد",
-  "Password must be at least 6 characters": "گذرواژه باید حداقل ۶ کاراکتر باشد",
-  "Passwords do not match": "گذرواژه‌ها مطابقت ندارند",
+  "New Password": "رمز عبور جدید",
+  "Noting is Here :(": "چیزی اینجا وجود ندارد :(",
+  "Password": "رمز عبور",
+  "Password changed successfully": "رمز عبور با موفقیت تغییر یافت",
+  "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
+  "Passwords do not match": "رمزهای عبور مطابقت ندارند",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
-  "Profile": "Profile",
+  "Profile": "پروفایل",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
-  "Settings": "Settings",
-  "Show password": "Show password",
+  "Settings": "تنظیمات",
+  "Show password": "نمایش رمز عبور",
   "Success": "موفقیت‌آمیز",
-  "Switch Profile": "Switch Profile",
-  "Switch User": "Switch User",
+  "Switch Profile": "تغییر پروفایل",
+  "Switch User": "تغییر کاربر",
   "UAvatar": "UAvatar",
   "UBadge": "UBadge",
   "UButton": "UButton",
   "UDropdownMenu": "UDropdownMenu",
   "UPagination": "UPagination",
   "UTable": "UTable",
-  "Update Profile": "Update Profile",
-  "User Registration": "User Registration",
-  "User logged in successfully": "User logged in successfully",
+  "Update Profile": "به‌روزرسانی پروفایل",
+  "User Registration": "ثبت‌نام کاربر",
+  "User logged in successfully": "ورود کاربر با موفقیت انجام شد",
   "User registered successfully": "کاربر با موفقیت ثبت شد",
   "Username": "نام کاربری",
   "Username is already taken. Please choose another one.": "این نام کاربری قبلاً انتخاب شده است. لطفاً نام دیگری را انتخاب کنید.",
   "Users": "کاربران",
-  "Your Current Password": "گذرواژه فعلی شما",
-  "Your first name": "Your first name",
-  "Your last name": "Your last name",
-  "Your username": "Your username",
+  "Your Current Password": "رمز عبور فعلی شما",
+  "Your first name": "نام شما",
+  "Your last name": "نام خانوادگی شما",
+  "Your username": "نام کاربری شما",
   "[role=\"dialog\"]": "[role=\"dialog\"]",
   "about": "درباره",
   "avatar": "آواتار",
+  "cccc": "cccc",
+  "ddMMMM": "ddMMMM",
   "description": "کوچولو و بازیگوش",
   "displayName": "نام نمایشی",
   "div": "div",
@@ -80,9 +85,10 @@
   "firstName": "نام",
   "i18n": "i18n",
   "lastName": "نام خانوادگی",
-  "more": "more",
+  "more": "بیشتر",
   "name": "نام",
-  "password": "گذرواژه",
+  "password": "رمز عبور",
+  "salt": "salt",
   "siteName": "مَموچی",
   "theme": "قالب",
   "titleFirst": "مَـ",
