basic role permission flow

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -3,6 +3,8 @@
   "About": "About",
   "Add New Role": "Add New Role",
   "Add New User": "Add New User",
+  "Add Role": "Add Role",
+  "At least one permission must be selected": "At least one permission must be selected",
   "Builds": "Builds",
   "Change Password": "Change Password",
   "Change Your Password": "Change Your Password",
@@ -13,14 +15,18 @@
   "Contact": "Contact",
   "Current Password": "Current Password",
   "Dashboard": "Dashboard",
+  "Description": "Description",
   "English": "English",
   "Enter Password": "Enter Password",
   "Enter password": "Enter password",
+  "Enter role description": "Enter role description",
+  "Enter role name": "Enter role name",
   "Enter username": "Enter username",
   "Error": "Error",
   "Ex: Developer Lead": "Ex: Developer Lead",
   "Exit": "Exit",
   "Explorer": "Explorer",
+  "Failed to add role": "Failed to add role",
   "Failed to change password": "Failed to change password",
   "Failed to retrieve the newly created user": "Failed to retrieve the newly created user",
   "First Name": "First Name",
@@ -46,11 +52,16 @@
   "Password changed successfully": "Password changed successfully",
   "Password must be at least 6 characters": "Password must be at least 6 characters",
   "Passwords do not match": "Passwords do not match",
+  "Permissions": "Permissions",
   "Persian": "Persian",
   "Personal Details": "Personal Details",
+  "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
   "Profile": "Profile",
   "Register": "Register",
   "Registered successfully": "Registered successfully",
+  "Role Name": "Role Name",
+  "Role added successfully": "Role added successfully",
+  "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
   "Settings": "Settings",
   "Show password": "Show password",
   "Success": "Success",
@@ -77,7 +88,6 @@
   "about": "About",
   "avatar": "Avatar",
   "cccc": "cccc",
-  "ddMMMM": "ddMMMM",
   "description": "Web Developer",
   "displayName": "Display Name",
   "div": "div",
@@ -88,6 +98,7 @@
   "more": "more",
   "name": "name",
   "password": "password",
+  "permissions": "permissions",
   "salt": "salt",
   "siteName": "Ali Zemani",
   "theme": "theme",
