--- a/i18n/locales/fa.json
+++ b/i18n/locales/fa.json
@@ -3,6 +3,8 @@
   "About": "درباره",
   "Add New Role": "افزودن نقش جدید",
   "Add New User": "افزودن کاربر جدید",
+  "Add Role": "Add Role",
+  "At least one permission must be selected": "At least one permission must be selected",
   "Builds": "ساخت‌ها",
   "Change Password": "تغییر رمز عبور",
   "Change Your Password": "رمز عبور خود را تغییر دهید",
@@ -13,14 +15,18 @@
   "Contact": "تماس",
   "Current Password": "رمز عبور فعلی",
   "Dashboard": "داشبورد",
+  "Description": "Description",
   "English": "انگلیسی",
   "Enter Password": "رمز عبور را وارد کنید",
   "Enter password": "رمز عبور را وارد کنید",
+  "Enter role description": "Enter role description",
+  "Enter role name": "Enter role name",
   "Enter username": "نام کاربری را وارد کنید",
   "Error": "خطا",
   "Ex: Developer Lead": "مثال: سرپرست توسعه",
   "Exit": "خروج",
   "Explorer": "کاوشگر",
+  "Failed to add role": "Failed to add role",
   "Failed to change password": "تغییر رمز عبور با شکست مواجه شد",
   "Failed to retrieve the newly created user": "دریافت اطلاعات کاربر جدید با مشکل مواجه شد",
   "First Name": "نام",
@@ -46,11 +52,16 @@
   "Password changed successfully": "رمز عبور با موفقیت تغییر یافت",
   "Password must be at least 6 characters": "رمز عبور باید حداقل ۶ کاراکتر باشد",
   "Passwords do not match": "رمزهای عبور مطابقت ندارند",
+  "Permissions": "Permissions",
   "Persian": "فارسی",
   "Personal Details": "اطلاعات شخصی",
+  "Please provide a role name, a description, and select the appropriate permissions.": "Please provide a role name, a description, and select the appropriate permissions.",
   "Profile": "پروفایل",
   "Register": "ثبت‌نام",
   "Registered successfully": "ثبت‌نام با موفقیت انجام شد",
+  "Role Name": "Role Name",
+  "Role added successfully": "Role added successfully",
+  "Role name is already taken. Please choose another one.": "Role name is already taken. Please choose another one.",
   "Settings": "تنظیمات",
   "Show password": "نمایش رمز عبور",
   "Success": "موفقیت‌آمیز",
@@ -77,7 +88,6 @@
   "about": "درباره",
   "avatar": "آواتار",
   "cccc": "cccc",
-  "ddMMMM": "ddMMMM",
   "description": "کوچولو و بازیگوش",
   "displayName": "نام نمایشی",
   "div": "div",
@@ -88,6 +98,7 @@
   "more": "بیشتر",
   "name": "نام",
   "password": "رمز عبور",
+  "permissions": "permissions",
   "salt": "salt",
   "siteName": "مَموچی",
   "theme": "قالب",
